// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card Component > matches snapshot when editing 1`] = `
<div
  aria-describedby="id"
  class="bg-green-100 rounded shadow-sm border-none mb-3 group p-0 min-h-[100px] relative flex flex-col overflow-hidden"
  data-rfd-drag-handle-context-id="mock-context-1"
  data-rfd-drag-handle-draggable-id="mock-draggable-1"
  data-rfd-draggable-context-id="mock-context-1"
  data-rfd-draggable-id="mock-draggable-1"
  draggable="false"
  role="button"
  tabindex="0"
>
  <div
    class="p-3"
    style="height: 0px;"
  >
    <textarea
      class="w-full h-[calc(100%-40px)] rounded border border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 text-sm p-2 resize-none"
    >
      Test Card Content
    </textarea>
    <div
      class="flex justify-end space-x-2 mt-2"
    >
      <button
        aria-label="Cancel"
        class="px-2.5 py-1 text-xs font-medium text-gray-700 bg-gray-100 rounded hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-300 cursor-pointer"
      >
        Cancel
      </button>
      <button
        aria-label="Save"
        class="px-2.5 py-1 text-xs font-medium bg-blue-500 text-white rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 cursor-pointer"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Card Component > matches snapshot when not owner 1`] = `
<div
  aria-describedby="id"
  class="bg-green-100 rounded shadow-sm border-none mb-3 group p-0 min-h-[100px] relative flex flex-col overflow-hidden"
  data-rfd-drag-handle-context-id="mock-context-1"
  data-rfd-drag-handle-draggable-id="mock-draggable-1"
  data-rfd-draggable-context-id="mock-context-1"
  data-rfd-draggable-id="mock-draggable-1"
  draggable="false"
  role="button"
  tabindex="0"
>
  <div
    class="absolute right-0 top-0 flex flex-col items-center py-2 px-0 min-w-[30px] z-10"
  />
  <div
    class="flex-grow py-3 mr-[30px] ml-[30px]"
  >
    <p
      class="text-sm text-gray-900 whitespace-pre-wrap break-words leading-relaxed text-left"
    >
      Test Card Content
    </p>
  </div>
  <div
    class="px-3 pb-2 relative"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <button
          class="p-1 rounded flex items-center transition-colors cursor-pointer text-gray-500 hover:text-green-600 hover:bg-green-50"
        >
          <svg
            aria-label="Upvote"
            class="lucide lucide-thumbs-up h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 10v12"
            />
            <path
              d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"
            />
          </svg>
        </button>
        <span
          class="text-xs font-medium mx-1"
        >
          5
        </span>
        <button
          class="p-1 rounded flex items-center transition-colors cursor-pointer text-gray-500 hover:text-red-600 hover:bg-red-50"
        >
          <svg
            aria-label="Downvote"
            class="lucide lucide-thumbs-down h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17 14V2"
            />
            <path
              d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22a3.13 3.13 0 0 1-3-3.88Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="text-right"
      >
        <div
          class="text-xs text-gray-500 italic"
        >
          Test User
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Component > matches snapshot when owner 1`] = `
<div
  aria-describedby="id"
  class="bg-green-100 rounded shadow-sm border-none mb-3 group p-0 min-h-[100px] relative flex flex-col overflow-hidden"
  data-rfd-drag-handle-context-id="mock-context-1"
  data-rfd-drag-handle-draggable-id="mock-draggable-1"
  data-rfd-draggable-context-id="mock-context-1"
  data-rfd-draggable-id="mock-draggable-1"
  draggable="false"
  role="button"
  tabindex="0"
>
  <div
    class="absolute right-0 top-0 flex flex-col items-center py-2 px-0 min-w-[30px] z-10"
  >
    <button
      aria-label="Delete"
      class="p-1 rounded text-red-600 hover:text-red-700 hover:bg-red-100 transition-colors cursor-pointer"
    >
      <svg
        class="lucide lucide-trash2 lucide-trash-2 h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 6h18"
        />
        <path
          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
        />
        <path
          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </button>
    <button
      aria-label="Edit"
      class="p-1 mt-2 rounded text-blue-600 hover:text-blue-700 hover:bg-blue-100 transition-colors cursor-pointer"
    >
      <svg
        class="lucide lucide-pen h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex-grow py-3 mr-[30px] ml-[30px]"
  >
    <p
      class="text-sm text-gray-900 whitespace-pre-wrap break-words leading-relaxed text-left"
    >
      Test Card Content
    </p>
  </div>
  <div
    class="px-3 pb-2 relative"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <button
          class="p-1 rounded flex items-center transition-colors cursor-pointer text-gray-500 hover:text-green-600 hover:bg-green-50"
        >
          <svg
            aria-label="Upvote"
            class="lucide lucide-thumbs-up h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 10v12"
            />
            <path
              d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2a3.13 3.13 0 0 1 3 3.88Z"
            />
          </svg>
        </button>
        <span
          class="text-xs font-medium mx-1"
        >
          5
        </span>
        <button
          class="p-1 rounded flex items-center transition-colors cursor-pointer text-gray-500 hover:text-red-600 hover:bg-red-50"
        >
          <svg
            aria-label="Downvote"
            class="lucide lucide-thumbs-down h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17 14V2"
            />
            <path
              d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22a3.13 3.13 0 0 1-3-3.88Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="text-right"
      >
        <div
          class="text-xs text-gray-500 italic"
        >
          Test User
        </div>
      </div>
    </div>
  </div>
</div>
`;
